tests/NormalTests/paczka1/fuzzy1/39848290.err
Error in line 2: gDDP2B A597 35,0
Error in line 15: eW20AgtH4 A597 66,2
Error in line 25: E7ELo A112 11,5
Error in line 24: eW20AgtH4 A112 14,2
Error in line 32: gDDP2B S682 8,8
Error in line 33: gDDP2B A597 77,5
